--- a/InternshipSkeleton/Views/LogInfo/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/AdvancedSearch.cshtml
@@ -7,7 +7,7 @@
 
 <h4>LogInfo - Advanced Search</h4>
 
-<!-- "EmailAddress", "TimeStamp", "Message", "MethodName", "Object", "Important" -->
+<!-- Input parameters: EmailAddress, TimeStamp, Message, MethodName, Object, UserImportant, Important -->
 
 <form name="myForm">
     @Html.Label("Email")
@@ -41,6 +41,7 @@
 
 
 <script>
+    /* setting today's date as end date for date range input */
     $(document).ready(function () {
         let today = new Date().toISOString().substr(0, 10);
         document.querySelector("#beginDate").max = today;
@@ -49,7 +50,6 @@
 
     $("#submitForm").click(function () {
         var formData = $('form[name="myForm"]').serializeArray();
-        debugger;
         var data = {};
         var index = 0;
         formData.forEach(function (pair) {
