--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -106,7 +106,7 @@
                     if (sortBy == category)
                     {
                         sortB = sortBy;
-                        className = "selectedSortLink";<!-- If sortBy == the category name, make the link underlined -->
+                        className = "selectedSortLink";
 
                         if (sortDir == "ASC")
                         { sortD = "DESC"; }
@@ -221,7 +221,7 @@ else
             exampleModalVisible = false;
         });
 
-        $(window).keydown(function(event){
+        $(window).keydown(function(event){ /* keep the page from submitting when user presses Enter */
             if(event.keyCode == 13) {
               event.preventDefault();
               return false;
@@ -235,7 +235,6 @@ else
         currentsortDir = sortD;
         usernameValue = $("[name=usernameEntry]").val();
 
-        debugger;
         var model = {
             UserID: currentUserID,
             TimeStamp: currentTimeStamp,
@@ -316,7 +315,6 @@ else
     };
 
      $("#btnSubmit").click(function () {
-        debugger;
         var formData = $('form[name="pageJump"]').serializeArray();
         var sortBy = formData[0].value;
         var sortDirection = formData[1].value;
@@ -327,12 +325,10 @@ else
         else {
             page = @Model.PageNumber;
         }
-
         updateButton(page, sortBy, sortDirection, "", "");
     });
 
     $("#searchSubmit").click(function () {
-        debugger;
         var formData = $('form[name="searchForm"]').serializeArray();
         var sortBy = formData[0].value;
         var sortDirection = formData[1].value;
@@ -348,7 +344,6 @@ else
         currentsortDir = sortD;
         currentsearchBy = searchB;
         currentsearchInput = searchI;
-        debugger;
 
         const form = document.createElement('form');
         form.method = 'post';
