--- a/InternshipSkeleton/Views/LogWebRequest/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/AdvancedSearch.cshtml
@@ -7,7 +7,7 @@
 
 <h4>LogWebRequest - Advanced Search</h4>
 
-<!-- TimeStamp, RawURL, Parameters, Important-->
+<!-- Input parameters: TimeStamp, RawURL, Parameters, UserImportant, Important-->
 
 <form name="myForm">
 
@@ -36,6 +36,7 @@
 
 
 <script>
+    /* setting today's date as end date for date range input */
     $(document).ready(function () {
         let today = new Date().toISOString().substr(0, 10);
         document.querySelector("#beginDate").max = today;
@@ -44,7 +45,6 @@
 
     $("#submitForm").click(function () {
         var formData = $('form[name="myForm"]').serializeArray();
-        debugger;
         var data = {};
         var index = 0;
         formData.forEach(function (pair) {
