--- a/InternshipSkeleton/Views/LogWebResponse/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/AdvancedSearch.cshtml
@@ -7,7 +7,7 @@
 
 <h4>LogWebResponse - Advanced Search</h4>
 
-<!-- Email, TimeStamp, Status, RedirectLocation, Important -->
+<!-- Input parameters: Email, TimeStamp, Status, RedirectLocation, UserImportant, Important -->
 
 <form name="myForm">
     @Html.Label("Email")
@@ -38,6 +38,7 @@
 
 
 <script>
+    /* setting today's date as end date for date range input */
     $(document).ready(function () {
         let today = new Date().toISOString().substr(0, 10);
         document.querySelector("#beginDate").max = today;
@@ -46,7 +47,6 @@
 
     $("#submitForm").click(function () {
         var formData = $('form[name="myForm"]').serializeArray();
-        debugger;
         var data = {};
         var index = 0;
         formData.forEach(function (pair) {
