--- a/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
@@ -104,7 +104,7 @@
                     if (sortBy == category)
                     {
                         sortB = sortBy;
-                        className = "selectedSortLink";<!-- If sortBy == the category name, make the link underlined -->
+                        className = "selectedSortLink";
 
                         if (sortDir == "ASC")
                         { sortD = "DESC"; }
@@ -213,7 +213,7 @@ else
             exampleModalVisible = false;
         });
 
-        $(window).keydown(function(event){
+        $(window).keydown(function(event){ /* keep the page from submitting when user presses Enter */
             if(event.keyCode == 13) {
               event.preventDefault();
               return false;
@@ -226,7 +226,6 @@ else
         currentsortBy = sortB;
         currentsortDir = sortD;
         usernameValue = $("[name=usernameEntry]").val();
-        debugger;
 
         var model = {
             TimeStamp: currentTimeStamp,
@@ -303,8 +302,7 @@ else
         });
     };
 
-     $("#btnSubmit").click(function () {
-        debugger;
+    $("#btnSubmit").click(function () {
         var formData = $('form[name="pageJump"]').serializeArray();
         var sortBy = formData[0].value;
         var sortDirection = formData[1].value;
@@ -320,7 +318,6 @@ else
     });
 
     $("#searchSubmit").click(function () {
-        debugger;
         var formData = $('form[name="searchForm"]').serializeArray();
         var sortBy = formData[0].value;
         var sortDirection = formData[1].value;
@@ -336,7 +333,6 @@ else
         currentsortDir = sortD;
         currentsearchBy = searchB;
         currentsearchInput = searchI;
-        debugger;
 
         const form = document.createElement('form');
         form.method = 'post';
