--- a/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/SearchIndex.cshtml
@@ -66,7 +66,7 @@
                     if (sortBy == category)
                     {
                         sortB = sortBy;
-                        className = "selectedSortLink";<!-- If sortBy == the category name, make the link underlined -->
+                        className = "selectedSortLink";
 
                         if (sortDir == "ASC")
                         { sortD = "DESC"; }
@@ -258,7 +258,6 @@ else
         currentid = page;
         currentsortBy = sortB;
         currentsortDir = sortD;
-        debugger;
 
         const form = document.createElement('form');
         form.method = 'post';
