made 'undo search' button disabled unless user has searched for something

--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -52,6 +52,9 @@
     width: 25% !important;
     display: inline-block;
 }
+button.disabled {
+    color: gray;
+}
 
 /* -----------------------Icons ---------------------------------------- */
 .filledIcon {
@@ -59,7 +62,6 @@
     display: block;
     margin: auto; 
 }
-
 .unfilledIcon {
     height: 75%;
     display: block;
