--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -16,6 +16,13 @@
     var id = Model.PageNumber;
     var searchDict = Model.SearchDictionary;
 
+    var basicSearch = true;
+    KeyValuePair<string,string> pair = new KeyValuePair<string, string>("Default", "");
+    if (searchDict.Contains(pair))
+    {
+        basicSearch = false;
+    } 
+
     List<String> categories = new List<String>() { "EmailAddress", "TimeStamp", "WebRequestID", "Message", "MethodName", "Object", "Important" };
 
     bool noResults = (Model.TotalItems == 0);
@@ -46,11 +53,7 @@
         </div>
         <button type="button" id="searchSubmit" name="searchSubmit" class="btn btn-default mybutton">Search</button>
 
-        @Html.ActionLink(linkText: "Undo search",
-        actionName: "Index",
-        controllerName: "LogInfo",
-        routeValues: new { sortBy = sortBy, sortDir = sortDir, id = 1 },
-        htmlAttributes: new { @class = "btn btn-default" })
+        <button type="button" id="undoButton" class="btn btn-default" onclick="undoSearch('@sortBy', '@sortDir', 1)">Undo search</button>
 
         @Html.ActionLink("Advanced Search", "AdvancedSearch", "LogInfo")
     </form>
@@ -185,6 +188,8 @@ else
     var currentsearchBy = null;
     var currentsearchInput = null;
 
+    var currentbasicSearch = '@basicSearch';
+
     function openModal(UserID, TimeStamp, WebRequestID, Message, MethodName) {
         event.preventDefault;
 
@@ -227,6 +232,13 @@ else
               return false;
             }
         });
+
+        if (currentbasicSearch != 'True') {
+            document.getElementById("undoButton").disabled = true;
+        }
+        else {
+            document.getElementById("undoButton").disabled = false;
+        }
     });
 
     function UpdateImportance(page, sortB, sortD) {
@@ -338,6 +350,15 @@ else
         updateButton(1, sortBy, sortDirection, searchBy, searchInput);
     });
 
+    function undoSearch(sortby, sortdir, page) {
+        debugger;
+        var sortBy = sortby;
+        var sortDirection = sortdir;
+        var page = page;
+
+        updateButton(page, sortBy, sortDirection, "Undo", ""); 
+    };
+
     function updateButton(page, sortB, sortD, searchB, searchI) {
         currentid = page;
         currentsortBy = sortB;
@@ -353,19 +374,27 @@ else
         var index = 0;
 
         var newSearch = ((currentsearchInput != undefined) && (currentsearchInput != ""));
-        //if it's a new search, add new search inputs
-        //if not a new search, add old search inputs 
-        if (newSearch) {
-            dictionary["searchDictionary[0].Key"] = currentsearchBy;
-            dictionary["searchDictionary[0].Value"] = currentsearchInput;
+
+        var undoSearch = (currentsearchBy == "Undo");
+        if (undoSearch) {
+            dictionary["searchDictionary[0].Key"] = "Default";
+            dictionary["searchDictionary[0].Value"] = "";
         }
         else {
-            for (var key in currentsearchDictionary) {
-                if (currentsearchDictionary.hasOwnProperty(key)) {
-                    dictionary["searchDictionary[" + index + "].Key"] = key;
-                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
+            //if it's a new search, add new search inputs
+            //if not a new search, add old search inputs 
+            if (newSearch) {
+                dictionary["searchDictionary[0].Key"] = currentsearchBy;
+                dictionary["searchDictionary[0].Value"] = currentsearchInput;
+            }
+            else {
+                for (var key in currentsearchDictionary) {
+                    if (currentsearchDictionary.hasOwnProperty(key)) {
+                        dictionary["searchDictionary[" + index + "].Key"] = key;
+                        dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
+                    }
+                    index = index + 1;
                 }
-                index = index + 1;
             }
         }
 
