adding total numbers of results on advanced search pages

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -68,7 +68,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <label class="pageLabel"> Current page: @Model.PageNumber / @Model.TotalPages</label>
+            <label class="pageLabel">Page: @Model.PageNumber / @Model.TotalPages</label>
         </div>
         <div class="col-md-4">
             <div class="btn-group">
