--- a/InternshipSkeleton/Views/LogWebResponse/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/SearchIndex.cshtml
@@ -26,8 +26,11 @@
 <!-- Paging stuff -->
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-2">
             <label class="pageLabel"> Current page: @Model.PageNumber / @Model.TotalPages</label>
+        </div>
+        <div class="col-md-2">
+            <h5>Total results: @Model.TotalItems</h5>
         </div>
         <div class="col-md-4">
             <div class="btn-group">
