--- a/InternshipSkeleton/Views/LogWebResponse/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/SearchIndex.cshtml
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="col-md-2">
-            @Html.ActionLink("Back to table", "Index", null, new { @class = "btn btn-default" })
+            @Html.ActionLink("Back to table", "Index", null, new { @class = "btn btn-default undosearchButton" })
         </div>
         <div class="col-md-2">
             @Html.ActionLink("New Search", "AdvancedSearch")
