styling home page

--- a/InternshipSkeleton/Views/Home/Index.cshtml
+++ b/InternshipSkeleton/Views/Home/Index.cshtml
@@ -3,7 +3,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-@Html.ActionLink("About", "About", "Home");
-@Html.ActionLink("Contact", "Contact", "Home");
-
+<div class="home">
+    <br />
+    Sophie Lanier <br />
+    Summer 2019 Internship <br />
+    Logging Project <br />
+</div>
