--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -143,7 +143,9 @@
                     <td>@currentRow.Message</td>
                     <td>@currentRow.MethodName</td>
                     <td>@currentRow.Source</td>
-                    <td>@currentRow.StackTrace</td>
+                    <td>@currentRow.StackTrace 
+                        <br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis('@currentRow.StackTrace');" />
+                    </td>
                     <td>
                         @if (currentRow.Important == null)
                         {
@@ -172,11 +174,20 @@ else
     <button class="modalButton" onclick="closeModal()">Cancel</button>
 </div>
 
+<div class="reveal" id="ellipsis-modal">
+    <div id="stackTrace"> </div>
+    <button class="modalButton" onclick="closeEllipsis()">Close</button>
+</div>
+
 @section scripts
 {
 <script language="javascript" type="text/javascript">
     var exampleModal;
     var exampleModalVisible = false;
+
+    var ellipsisModal;
+    var ellipsisModalVisible = false;
+    var currentStackTrace;
 
     var currentUserID = null;
     var currentEmailAddress = null;
@@ -196,7 +207,7 @@ else
 
     function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, MethodName, Source) {
         event.preventDefault;
-        debugger;
+
         currentUserID = UserID;
         currentEmailAddress = EmailAddress;
         currentTimeStamp = TimeStamp;
@@ -220,16 +231,36 @@ else
         exampleModal.close();
     }
 
+    function openEllipsis(StackTrace) {
+        event.preventDefault;
+        currentStackTrace = StackTrace;
+        debugger;
+        $("#stackTrace").html(currentStackTrace);
+        ellipsisModal.open();
+    }
+
+    function closeEllipsis() {
+        event.preventDefault;
+        currentStackTrace = null;
+        ellipsisModal.close();
+    }
+
     $(document).ready(function () {
 
         exampleModal = new Foundation.Reveal($("#example-modal"));
-
         $("#example-modal").on("open.zf.reveal", function () {
             exampleModalVisible = true;
         });
-
         $("#example-modal").on("closed.zf.reveal", function () {
             exampleModalVisible = false;
+        });
+
+        ellipsisModal = new Foundation.Reveal($("#ellipsis-modal"));
+        $("#ellipsis-modal").on("open.zf.reveal", function () {
+            ellipsisModalVisible = true;
+        });
+        $("#ellipsis-modal").on("closed.zf.reveal", function () {
+            ellipsisModalVisible = false;
         });
 
         $(window).keydown(function(event){ /* keep the page from submitting when user presses Enter */
@@ -361,7 +392,6 @@ else
     });
 
     function undoSearch(sortby, sortdir, page) {
-        debugger;
         var sortBy = sortby;
         var sortDirection = sortdir;
         var page = page;
