--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -166,17 +166,24 @@ else
     <h2> No results found. </h2>
 }
 
-<div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
+<div class="reveal tiny" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
+    <button type="button" class="close" aria-label="Close" onclick="closeModal()">
+        <span aria-hidden="true">&times;</span>
+    </button>
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
     </form>
     <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
-    <button class="modalButton" onclick="closeModal()">Cancel</button>
+    <!-- <button class="modalButton" onclick="closeModal()">Cancel</button> -->
 </div>
 
-<div class="reveal" id="ellipsis-modal">
+<div class="reveal" id="ellipsis-modal" data-close-on-click>
+    
+    <button type="button" class="close" aria-label="Close" onclick="closeEllipsis()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+
     <div id="stackTrace"> </div>
-    <button class="modalButton" onclick="closeEllipsis()">Close</button>
 </div>
 
 @section scripts
@@ -235,12 +242,12 @@ else
         event.preventDefault;
         currentStackTrace = StackTrace;
         debugger;
-        $("#stackTrace").html(currentStackTrace);
+        $("#stackTrace").html(currentStackTrace); //writing the stack trace into a div in the modal
         ellipsisModal.open();
     }
 
     function closeEllipsis() {
-        event.preventDefault;
+        //event.preventDefault;
         currentStackTrace = null;
         ellipsisModal.close();
     }
